[tool.poetry]
name = "olist-sales-forecasting"
version = "0.1.0"
description = ""
authors = ["eduardohealli <eng.eduardohealli@gmail.com>"]
readme = "README.md"
packages = [{include = "olist_sales_forecasting"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
